k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bia
  namespace: default
  labels:
    app: bia
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bia
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: bia
    spec:
      containers:
        - name: bia
          image: IMAGE_PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
