k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bia
  namespace: default
spec:
  type: NodePort
  selector:
    app: bia
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
